_input/css/all.css
/* Local Google fonts with the help of https://gwfh.mranftl.com/fonts  */

/* eb-garamond-regular - latin */
@font-face {
  font-family: 'EB Garamond';
  font-style: normal;
  font-weight: 400;
  src: local(''),
       url('/fonts/eb-garamond-v25-latin-regular.woff2') format('woff2');
  font-display: swap;
}

/* roboto-slab-regular - latin */
@font-face {
  font-family: 'Roboto Slab';
  font-style: normal;
  font-weight: 300;
  src: local(''),
       url('/fonts/roboto-slab-v33-latin-300.woff2') format('woff2');
  font-display: swap;
}

/********** reset from https://andy-bell.co.uk/a-more-modern-css-reset/ **********/

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Prevent font size inflation */
html {
  -moz-text-size-adjust: none;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
}

/* Remove default margin in favour of better control in authored CSS */
body, h1, h2, h3, h4, p,
figure, blockquote, dl, dd {
  margin: 0;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  line-height: 1.5;
}

/* Set shorter line heights on headings and interactive elements */
h1, h2, h3, h4,
button, input, label {
  line-height: 1.1;
}

/* Balance text wrapping on headings */
h1, h2,
h3, h4 {
  text-wrap: balance;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
  color: currentColor;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input, button,
textarea, select {
  font: inherit;
}

/* Make sure textareas without a rows attribute are not tiny */
textarea:not([rows]) {
  min-height: 10em;
}

/* Anything that has been anchored to should have extra scroll margin */
:target {
  scroll-margin-block: 5ex;
}

/********** end reset **********/


:root {
  --spacing-xs: 8px;
  --spacing-s: 12px;
  --spacing: 24px;
  --spacing-m: 36px;
  /* Color scheme 324, page 233 from A Dictionary of Color Combinations */
  --pompeian-red: rgb(162, 46, 55);
  --olympic-blue: #247291;
  --aconite-violet: #85608e;
  --neutral-gray: #B5D1CC;
  --color-gainsboro: #DCDCDC;
  --color-code-bg: #f5f2f0;

  --link-color: var(--olympic-blue);
  --visited-link-color: var(--aconite-violet);
}

/* TODO: dark theme */
@media (prefers-color-scheme: dark) {
}

/* Custom styles */
body {
  font-size: 18px;
  font-family: 'Roboto Slab', serif;
}

::selection {
  background: var(--olympic-blue);
  color: white;
}

header, footer {
  margin: auto;
  display: flex;
  justify-content: center;
}

footer {
  font-size: 21px;
  margin-bottom: var(--spacing);
}

main {
  max-width: 75ch;
  margin: auto;
  padding: 0 var(--spacing) var(--spacing) var(--spacing);

  ol, ul {
    margin: 0;
    padding: 0;
  }
}


nav {
  font-family: sans-serif;
  text-transform: uppercase;
  font-weight: 400;
  margin: var(--spacing);
  border-radius: 3px;
  border: 1px #333333 solid;
  box-shadow: 2px 2px 3px 0 #bbbbbb;
  
  ol {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    padding: 0;
    margin: 0;
    
    li {
      margin: var(--spacing-s);
    }

    li {
      list-style-type: none;
    }
  }

  a, a:visited {
    color: black;
    text-decoration: none;
  }

  a:hover {
    border-bottom: 1px dotted black;
    padding-bottom: 2px;
  }  
}


a {
  color: var(--link-color);
}
a:visited {
  color: var(--visited-link-color);
}


h1, h2, h3, h4, h5, h6 {
  font-family: 'EB Garamond', serif;
  font-weight: normal;
}
h1 {
  font-size: 2em;
  line-height: calc(1ex / 0.42);
  margin: calc(1ex / 0.42) 0 1ex 0;
}
h2 {
  font-size: 1.5em;
  line-height: calc(1ex / 0.37);
  margin: calc(1ex / 0.37) 0 1ex 0;
}
h3 {
  font-size: 1.3em;
  line-height: calc(1ex / 0.32);
  margin: calc(1ex / 0.32) 0 1ex 0;
}
h4 {
  font-size: 1.15em;
  line-height: calc(1ex / 0.28);
  margin: calc(1ex / 0.28) 0 1ex 0;
}


.cover {
  text-align: center;
  line-height: 400%;
  border: 1px solid black;
  margin-bottom: var(--spacing);
  
  h1 {
    border: none;
    word-wrap: break-all;
  }

  h1, h2 {
    letter-spacing: 12px;
  }  
}


article p:first-of-type,
h1 + p,
h2 + p,
h3 + p,
h4 + p,
p + ul {
  margin-top: var(--spacing-s);
}


article {
  p, pre, ul, ol {
    margin: calc(1ex / 0.32) 0 0 0;
  }

  p {
    line-height: calc(1ex / 0.32);
    font-size: 1em;

    code {
      background-color: var(--color-code-bg);
      padding: 0 4px;
    }
  }
  
  ul, ol {
    line-height: calc(1ex / 0.28);
    font-size: 1em;
  }

  .postdate {
    display: block;
    text-align: left;
    margin: 0;
    font-family: monospace;
  }

  time {
    font-style: italic;
    font-size: 12px;
  }

  pre, code {
    font-family: monospace;
    font-size: 16px;
    border-radius: 3px;
  }
  
  pre {
    padding: var(--spacing-s);
    background-color: var(--color-code-bg);
    overflow-x: auto;
    overflow-y: hidden;
  }

  img {
    width: 100%;
  }  
}


ol.postlist {
  time {
    display: block;
    font-family: monospace;
    font-size: 12px;
    line-height: 1;
  }

  li {
    margin-bottom: var(--spacing-s);
    list-style-type: none;
  }  
}


@media only screen and (min-width: 1000px)  {
  .postlist {

    li {
      display: flex;
      align-items: center;  
    }

    time {
      display: inline-block;
      text-align: right;
      width: 19ch;
      margin: 0 0 0 -19ch;
      padding-right: 1ch;

      &:after {
        content: ' ·';
      }  
    }
  }  
}

